terraform-multi-instance-ebs-aws/security-group.tf
resource "aws_security_group" "multi-instance-sg" {
  #vpc_id = var.ex_vpc
  name = "multi-instance-sg"
  description = "For multi-instance ASG"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }
}
